[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/cave_story.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/themes/panel/panel.png" type="Texture" id=2]
[ext_resource path="res://assets/scenes/theater/button.normal.png" type="Texture" id=3]
[ext_resource path="res://src/scenes/theater/theater.gd" type="Script" id=4]
[ext_resource path="res://assets/scenes/theater/button.pressed.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 5, 5 )
expand_margin_left = 12.0
expand_margin_right = 12.0
expand_margin_top = 12.0
expand_margin_bottom = 12.0

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 5, 5 )
expand_margin_left = 12.0
expand_margin_right = 12.0
expand_margin_top = 12.0
expand_margin_bottom = 12.0

[node name="Theater" type="CanvasLayer"]
layer = 9
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlideTexture" type="TextureRect" parent="Control/TextureRect/MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 992.0
margin_bottom = 568.0
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prev" type="Button" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 23.0
margin_top = -63.0
margin_right = 80.0
margin_bottom = -23.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
text = "<<<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -63.0
margin_right = -23.0
margin_bottom = -23.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
text = ">>>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Done" type="Button" parent="Control"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -164.0
margin_top = -60.0
margin_right = -24.0
margin_bottom = -23.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
text = "DONE"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/Prev" to="." method="_on_Prev_pressed"]
[connection signal="pressed" from="Control/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Control/Done" to="." method="_on_Done_pressed"]
